# fls_v1

./: .gitignore  Makefile  app_log.txt  main.py  pyproject.toml
profibus/hilscher/: pyproject.toml
profibus/hilscher/src/hilscher/: CIFX70E_DP.py  Definitions.py  __init__.py  devices.json
src/fls_cli/: main.py  pyproject.toml
src/fls_cli/src/fls_cli/: __init__.py  fls_cli.py
src/fls_gui/: main.py  pyproject.toml
src/fls_show/: app_log.txt  pyproject.toml
src/fls_show/src/fls_show/: __init__.py  fls_show.py
src/fls_svc/: main.py  pyproject.toml
src/profibus/: main.py  pyproject.toml
src/utils/: pyproject.toml
src/utils/src/utils/: __init__.py  text_logger.py
tests/: test_logger.py
tests/config/: fls.ini
tools/: pyproject.toml
