[project]
name = "core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tg-who", email = "werner.hoelbling@technikgruppe.com" }
]
requires-python = ">=3.13.3"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocstrings[python]>=0.29.1",
]

[project.scripts]
core = "core:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "src/fls_cli",
    "src/fls_gui",
    "src/fls_svc",
    "src/profibus",
    "tools",
]
