[project]
name = "hilscher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Coding-AI-with-html", email = "krekeris440@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
hilscher = "hilscher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
